classDiagram
  direction TB

  class TypeRelations {
    -type_chart : dict
    +get_effectiveness(attack_type, defender_types) float
  }

  class Stats {
    +hp : float
    +attack : float
    +defense : float
    +special_attack : float
    +special_defense : float
    +speed : float
  }

  class Move {
    -_name : str
    -_type : str
    -_power : float
    -_accuracy : int
    -_pp : int
    +name() str
    +type() str
    +power() float
    +accuracy() int
    +pp() int
  }

  class Moveset {
    -moves : list~Move~
    +add_move(move) bool
    +remove_move(index) bool
    +replace_move(index, new_move) bool
    +get_moves() list~Move~
    +show_moves() None
  }

  class Pokemon {
    +name : str
    +types : list~str~
    +stats : Stats
    +level : int
    +experience : int
    +experience_to_level_up : int
    +evolution : str
    +evolution_level : int
    +stats_base : Stats
    +stats_max : Stats
    +moveset : Moveset
    +attack(target, move, relations) Pokemon
    +gain_experience(amount) Pokemon
    +level_up() Pokemon
    +defender(damage) None
    +is_fainted() bool
    +evolve() Pokemon
    +get_stats() str
  }

  class Charmeleon {
    +__init__(level)
  }

  class CombatEngine {
    <<static>>
    +hit_accuracy(attack, defender_types)$ tuple
    +calculate_damage(attacker, defender, move)$ float
  }

  class Trainer {
    +nombre : str
    +team : str
    +pokemon : list~Pokemon~
    +add_pokemon(pokemon) None
    +get_active_pokemon() Pokemon
    +get_next_available_pokemon_index() int
    +switch_pokemon(pokemon_index) None
    +handle_evolution(old_pokemon, new_pokemon) None
  }

  class Field {
    +trainer1 : Trainer
    +trainer2 : Trainer
    +determine_turn_order() list~Pokemon~
    +battle_finished(participants) bool
    +battlefield() None
  }

  Pokemon <|-- Charmeleon
  Pokemon *-- Stats : stats / stats_base / stats_max
  Pokemon *-- Moveset : moveset
  Moveset *-- Move : 0..4
  Trainer *-- Pokemon : 1..6
  Field o-- Trainer : trainer1 / trainer2
  Field ..> CombatEngine : usa
  CombatEngine ..> TypeRelations : delega efectividad
  Pokemon ..> CombatEngine : llama en attack()